simon: create and select of list element

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Simon Says</title>
 </head>
 <body>
+  <main>
+    <ul id="number-list"></ul>
+  </main>
   <script src="./assets/js/main.js"></script>
 </body>
 </html>
