simon: debug of timing function to see if it works, add html elements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
   <main>
     <ul id="number-list"></ul>
+    <div id="user-input">
+      
+    </div>
+    <button id="button">Invia</button>
   </main>
   <script src="./assets/js/main.js"></script>
 </body>
