--- a/index.html
+++ b/index.html
@@ -3,14 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <title>Simon Says</title>
 </head>
 <body>
+  <header class="text-center bg-dark text-white">
+    <h1>Memorizza i numeri</h1>
+  </header>
   <main>
     <ul id="number-list"></ul>
-    <div id="user-input">
-      
-    </div>
+    <form id="user-input" class="d-none">
+      <div class="d-flex gap-5" id="input-group">
+        <input type="number" name="" id="" class="form-control">
+        <input type="number" name="" id="" class="form-control">
+        <input type="number" name="" id="" class="form-control">
+        <input type="number" name="" id="" class="form-control">
+        <input type="number" name="" id="" class="form-control">
+      </div>
+    </form>
     <button id="button">Invia</button>
   </main>
   <script src="./assets/js/main.js"></script>
