simon: add html elements and classes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <header class="text-center bg-dark text-white">
     <h1>Memorizza i numeri</h1>
   </header>
-  <main>
-    <ul id="number-list"></ul>
+  <main class="container">
+    <p id="timer"></p>
+    <ul id="number-list" class="d-flex list-unstyled gap-5"></ul>
     <form id="user-input" class="d-none">
       <div class="d-flex gap-5" id="input-group">
         <input type="number" name="" id="" class="form-control">
@@ -21,7 +22,7 @@
         <input type="number" name="" id="" class="form-control">
       </div>
     </form>
-    <button id="button">Invia</button>
+    <button id="button" class="btn btn-primary">Invia</button>
   </main>
   <script src="./assets/js/main.js"></script>
 </body>
