simon: add timing function to make the form appear, when the input are submitted, the values are pushed in the array

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <main class="container">
     <p id="timer"></p>
     <ul id="number-list" class="d-flex list-unstyled gap-5"></ul>
-    <form id="user-input" class="d-none">
+    <form id="user-input" class="">
       <div class="d-flex gap-5" id="input-group">
-        <input type="number" name="" id="" class="form-control">
-        <input type="number" name="" id="" class="form-control">
-        <input type="number" name="" id="" class="form-control">
-        <input type="number" name="" id="" class="form-control">
-        <input type="number" name="" id="" class="form-control">
+        <input type="number" name="" id="number1" class="form-control" placeholder="Inserisci il primo numero">
+        <input type="number" name="" id="number2" class="form-control" placeholder="Inserisci il secondo numero">
+        <input type="number" name="" id="number3" class="form-control" placeholder="Inserisci il terzo numero">
+        <input type="number" name="" id="number4" class="form-control" placeholder="Inserisci il quarto numero">
+        <input type="number" name="" id="number5" class="form-control" placeholder="Inserisci il quinto numero">
       </div>
     </form>
-    <button id="button" class="btn btn-primary">Invia</button>
+    <button id="button" class="btn btn-primary my-3">Invia</button>
   </main>
   <script src="./assets/js/main.js"></script>
 </body>
