simon: create another time function, in which i create the click event to put the input values in the user arrays, check if the user guessed the numbers

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main class="container">
     <p id="timer"></p>
     <ul id="number-list" class="d-flex list-unstyled gap-5"></ul>
-    <form id="user-input" class="">
+    <form id="user-input" class="d-none">
       <div class="d-flex gap-5" id="input-group">
         <input type="number" name="" id="number1" class="form-control" placeholder="Inserisci il primo numero">
         <input type="number" name="" id="number2" class="form-control" placeholder="Inserisci il secondo numero">
